--- a/logstash.conf
+++ b/logstash.conf
@@ -1,8 +1,8 @@
 input {
-    file {
-        path => "/var/log/dpkg.log"
-        start_position => "beginning"
-    }
+      beats {
+    port => 5044
+  }
+
 }
 
 filter { }
@@ -12,7 +12,7 @@ output {
     hosts => "${ELASTIC_HOSTS}"
     user => "elastic"
     password => "${ELASTIC_PASSWORD}"
-    index => "logstash-%{+YYYY.MM.dd}"
+    index => "kali-logs-%{+YYYY.MM.dd}"
     }
     stdout { }
 }
